2004-07-19 Vladimir Hirsl

	Implementation of HP-UX SOM binary parser page.

	* src/org/eclipse/cdt/ui/dialogs/AbstractGnuBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/CygwinPEBinaryParserPage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUElfinaryParserpage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUSomBinaryParserpage.java
	* src/org/eclipse/cdt/ui/dialogs/GNUXCoffinaryParserpage.java
	
2004-07-16 Tanya Wolff

	Fix for 70221: unexternalized strings
	* org.eclipse.cdt.internal.ui/search/CountLabelProvider.java
	* org.eclipse.cdt.internal.ui/search/CSearchMessages.properties

2004-07-15 Tanya Wolff

	Fix for 70124: unexternalized strings
	* org.eclipse.cdt.ui.wizards.conversion/ConvertProjectWizardPage.java
	* org.eclipse.cdt.internal.ui/CUIMessages.properties

	Fix for 70143: duplicate mnemonics in binary parser options
	* org.eclipse.cdt.ui.dialogs.CygwinPEBinaryParserPage.java
	* org.eclipse.cdt.ui.dialogs.GnuElfBinaryParserPage.java
	* org.eclipse.cdt.internal.ui/CUIMessages.properties

2004-07-15 Hoda Amer
	Fix for PR 68500: [Outline View] After doing a rename of a class, the outline viewer does not display the new name (just the old name)

2004-07-09 Hoda Amer
	Fix for PR 69510 : [C++ Class Wizard] error message in C++ Class Wizard if invoke Class Wizard from existing C++ class in C/C++ Project View
	
2004-07-08 Hoda Amer
	Partial fix for PR 69439: content assist confusion	
	
2004-07-08 Bogdan Gheorghe
	Fix for 64177: [Search] Clean up Selection Search UI
	Fix for 57121: [Search] Searching when all of the "Search For" checkboxes are unchecked causes an exception
	Fix for 68249: Accessibility: Project Settings Indexer description chopped
	
	* src/org/eclipse/cdt/internal/ui/CPluginResources.properties
	* src/org/eclipse/cdt/internal/ui/cview/MainActionGroup.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties
	* src/org/eclipse/cdt/internal/ui/editor/CContentOutlinePage.java