@@ -1,3 +1,8 @@
+2004-07-19 Alain Magloire
+
+	Fix for PR 70319: Clearing the console on build.
+	* src/org/eclipse/cdt/internal/ui/buildconsole/BuildConsolePartioner.java
+
 2004-07-19 Vladimir Hirsl
 
 	Implementation of HP-UX SOM binary parser page.
